Exceptions: fix whitespace formatting

--- a/Opserver/Content/themes/_shared/exceptions.less
+++ b/Opserver/Content/themes/_shared/exceptions.less
@@ -109,9 +109,14 @@
         overflow: auto;
         //font-family: Consolas, Monaco, monospace;
         line-height: 1.1;
+        white-space: pre;
 
         code {
-            font-size: 0.9em;
+            font-size: 0.8em;
+        }
+
+        &.stack-row {
+            white-space: nowrap;
         }
 
         &.stack {
