--- a/Opserver/Content/themes/dark/styles.css
+++ b/Opserver/Content/themes/dark/styles.css
@@ -9347,9 +9347,13 @@ svg .stroke-muted.filled {
   padding: 0.5em;
   overflow: auto;
   line-height: 1.1;
+  white-space: pre;
 }
 .error-info pre code {
-  font-size: 0.9em;
+  font-size: 0.8em;
+}
+.error-info pre.stack-row {
+  white-space: nowrap;
 }
 .error-info pre.stack {
   background-color: #fefbec;
